assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    /* border: 1px solid red; */
}
img{
    display: block;
}


.bold{
    font-weight: bold;
}
p, h3, blockquote, cite{
    line-height: 140%;
}
html{
    font-family: sans-serif;
    scroll-behavior: smooth;
}
/* header elements */
header nav{
    display: flex;
    justify-content: space-between;
    background-color: white;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 999;
}

nav ul{
    display: flex;
    gap: 2em;
    list-style-type: none;
    padding:0 15px 0 15px;
}


nav ul li{
    padding:20px 0 15px 0;
}

nav ul li:hover{
    border-bottom: 2px solid black;
}



nav ul li a{
    text-decoration: none;
    color: black;
    text-transform:capitalize;
}
/* ----------------------- utility blue button */
.btn{
    padding:12px 20px;
    text-decoration: none;
}

.blue{
    background-color: #0661FF;
    color: white;
}
.white{
    color: black;
    background-color: white;
    border: 1px solid black;
}

.blue:hover{
    background-color: #3d87ff;
}

.white:hover{
    opacity: 0.5;
}
/* ---------------------------------------- */
nav ul li a.blue{
    margin-left: -20px;
}


/* cta elements */
#cta{
    background-color: #B4D0E7;
    position: relative;
}

#cta .cta-container{
    width: 65%;
    margin: 0 auto;
}
#cta .flex{
    display: flex;
}

#cta h1{
    font-family: 'Poppins', sans-serif;
    font-size: 5rem;
    padding:1.5em 0 0.5em 0;
}

#cta div.cta-text-area{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap:30px;

}
#cta div.cta-text-area p{
    line-height: 140%;
    font-size: 1.1rem;
}

#cta div.cta-text-area a i{
    margin-top: 1em;
    padding-bottom: 0.5em;
    font-size: 3rem;
    color: black;
}
#cta figure img{
    width: 880px;
    height: 100%;
}
#cta figure{
    margin-bottom: -70px;
}

/* main */

main{
    margin-top:75px
}

.container{
    width: 55%;
    margin: 0 auto;
}

/* main section 1 */

/* billing */
#section1 h2{
    padding:1.5em 0 1em 0;
}
h2{
    font-size: 2.5rem;
}

#section1 #billing{
    display: flex;
    align-items: center;
    gap: 2em;
}

/* plans */
#section1{
    display: flex;
    flex-direction: column;
    gap: 3.5em;
}

#section1 div.plan{
    display: flex;
    gap:3.5em;
}

.sales-office{
    display: flex;
    justify-content: space-between;
}



/* all plan will have a border */
#section1 div.plan > div,
#section1 div.team{
    border: 0.5px solid gray;
}
/* ---------------------------------------- */
#section1 div.row > div{
    width: calc(100% / 3);
}


.user{
    text-align: center;
    padding-block: 0.6em;
    border-bottom: 0.5px solid gray;
}


.plan-inner-container{
    padding: 2em;
    display: flex;
    flex-direction: column;
    gap: 3.5em;
}


#section1 .plan .price-month,
#section1 .plan .feature,
#section1 .plan .try-or-buy-now,
#section1 .plan hr,
#section1 .plan .highlights,
#section1 .sales-office .price-month{
    display: flex;
    flex-direction: column;
    gap:1em;
} 

#section1 .plan .flex-list{
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    list-style-type: none;
    gap: 1em;
}
#section1 .plan .flex-list .flex-element{
    display: flex;
}


#section1 .plan .highlights{
    padding-bottom: 2em;
}

#section1 .plan .try-or-buy-now{
    gap: 3em;
}

h3{
    font-size: 1.5rem;
}
#section1 .plan .price-month .currency{
    font-weight: bold;
}

/* euro */
#section1 .plan .price-month .currency::before{
    content: "\20AC";
    margin-right: 3px;
}
#section1 .plan .try-or-buy-now a{
    text-align: center;
}

#section1 hr{
    border: 0.5px solid lightgray;
    width: 25%;
}

#section1 .highlights h5{
    font-size: 1rem;
}

#section1 .team p{
   width: 85%;
   padding-top: 3em;
}



/* plans icons */
.icon::before {
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font-family: "Font Awesome 5 Free";
    font-weight: 700;
    margin-right: 5px;
}

.user-icon::before{
    content: "\f007";
}
.more-users-icon::before{
    content: "\f0c0";
}
.folder-icon::before{
    content: "\f07b";
}
.share-icon::before{
    content: "\f542";
}
.check-icon::before{
    content: "\f00c";
    color: #0661FF;
}
.enterprise-icon::before{
    content: "\f1ad";
}

/* section 1 partner dropbox */
#section1 .partner-dropbox figure img{
    width: 600px;
}

#section1 .partner-dropbox{
    margin-top: 6em;
    display: flex;
    gap:4em;
}
#section1 .partner-dropbox-text{
    padding:4em 4em 1em 0;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1.5em;
}


/* section 2 elements */
#section2 .business-boxes{
    display: flex;
    flex-wrap: wrap;
    gap: 3em;
    padding-bottom:5em;
}
#section2{
    margin-top:12em;
}
#section2 h2{
    font-size: 2.7em;
    margin-bottom: 1em;
}
#section2 .business-boxes .box figure img{
    width: 100%;
    height: 100%;
}
#section2 .business-boxes .box{
    width: calc((100% / 3) - 2em);
    display: flex;
    flex-direction: column;
    gap:1em;
}
#section2 .business-boxes .text-box{
    display: flex;
    flex-direction: column;
    gap: 1.5em;
}

/* section 3 elements */
a{
    color:#0661FF;
}
#section3 div.partner-title h2{
    line-height: 140%;
}
#section3 div.partner-title{
    padding-block: 9em;
    width: 60%;
    display: flex;
    flex-direction: column;
    gap: 3em;
}

#section3 #partners{
    height: 65vh;
    display: flex;
    justify-content: space-between;
}

/* smaller squares */
#section3 #partners .business-square-col{
    width: 25%;
}

#section3 #partners .business-square-col .square{
    height: 50%;
}

/* center square - bigger */
#section3 #partners .business-square-center-col{
    width: 50%;
    overflow: auto;
    display: flex;
    flex-direction: column;
}

#section3 #partners .business-square-center-col .square-center{
    height: 100%;
    padding: 3em;
    overflow: auto;
    display: flex;
    flex-direction: column;
    gap: 3.5em;
    background-color: #F5F5F5;
}

#section3 #partners .business-square-center-col .square-center img{
    width: 50%;
}


/* left logos */

/* left group top-left */
#section3 #partners .business-square-col .left-tl{
    background-color: #A2D39B;
    border: 15px solid #D1E9CD;
}

#section3 #partners figure img:not(#partners .business-square-center-col .square-center figure img){ 
    width: 50%;
    filter: invert(); 
}
#section3 #partners figure:not(#partners .business-square-center-col .square-center figure){
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}




/* left group bottom-left */
#section3 #partners .business-square-col .left-bl{
    background-color: #0093CE;
}
/* left group top-right */
#section3 #partners .business-square-col .left-tr{
    background-color: #61082B;
}
/* left group bottom-right */
#section3 #partners .business-square-col .left-br{
    background-color: #FF1C1C;
}


/* right logos */
/* left right top-left */
#section3 #partners .business-square-col .right-tl{
    background-color: #D5001F;
}
/* left right bottom-left */
#section3 #partners .business-square-col .right-bl{
    background-color: #0D2481;
}
/* left right top-right */
#section3 #partners .business-square-col .right-tr{
    background-color: #B4D0E7;
}
/* left right bottom-right */
#section3 #partners .business-square-col .right-br{
    background-color: #FFD830;
}

/* to center the bg */
.bg{
    background-repeat: no-repeat;
    background-position: center;
    background-size: 50%;
}

/* section 3 inner square circles element */
#section3 hr{
    border: 0.5px solid lightgray;
    width: 25%;
}
cite{
    font-style: normal;
}

/* free trial banner elements */
#section3 div.free-trial{
    background-color: #B4D0E7;
}
#section3 div.free-trial div.container{
    padding-block: 9em;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}
#section3 .free-trial h2{
    width: 50%;
}
#section3 div.free-trial div.container a.btn{
    border: transparent;
}
#section3 div.free-trial div.container a.btn:hover{
    border: transparent;
    animation-name: vibrazione;
    animation-timing-function: linear;
    animation-duration:1.5s;
    animation-iteration-count: infinite;
}
@keyframes vibrazione{
    0%{
        transform: rotate(0deg);
    }
    25%{
        transform: rotate(10deg);
    }
    50%{
        transform: rotate(0deg);
    }
    75%{
        transform: rotate(-10deg);
    }
    100%{
        transform: rotate(0deg);
    }


    /* section 4 frequent questions */
}
#section4{
    margin-block:8em;
}
#section4 h2{
    padding-bottom: 1.8em;
}

#section4 .flex-col-fq{
    display: flex;
    flex-direction: column;

}
#section4 .flex-fq{
    display: flex;
    justify-content: space-between;
    padding-block:2.5em;
    
}
#section4 i{
    margin-right: 3em;
}
#section4 hr{
    border: 0.5px solid gray;
}
#section4 p, #section4 i{
    font-size: 1.1rem;
    
}

/* section 4 frequent questions animations*/
#section4 i{
    transition:transform 0.5s;
}

.hidden{
    display:none;
}
#section4 .flex-fq:hover + .hidden{
    animation-name: fadeIn;
    animation-duration: 0.5s;
    display: block;
    padding-bottom: 1em;
}
@keyframes fadeIn {
    from{
        opacity: 0;
    }
    to{
        opacity: 1;
    }
}

#section4 .flex-fq:hover:nth-of-type(even) i{
    transform: rotate(180deg);
}
#section4 .flex-fq:hover:nth-of-type(odd) i{
    transform: rotate(-180deg);
}


/* footer elements */
#footer, #footer a{
    background-color: black;
    text-decoration: none;
    color: #EEFBFF;
}

#footer .f-container{
    width: 60%;
    margin: 0 auto;
    padding:5em 0 2em 0;
}
#footer .f-container .flex-footer{
    display: flex;
    justify-content: space-between;
}
#footer .f-container .flex-footer ul{
    display: flex;
    flex-direction: column;
    gap: 1.5em;
    list-style-type:none;
}

#footer .f-container .flex-footer ul li:first-child{
    font-size: 1.5rem;

}
#footer .f-container .flex-footer ul li a:hover{
   border-bottom: 1px solid white;
}

#footer span.lang::after{
    content: "▴";
    margin-left: 2px;
}
#footer .footer-hr{
    width: 11%;
    margin:7em 0 3em 0;
    border: 0.5px solid gray;
}
#footer .footer-lang{
    font-weight: 200;
    color: gray;
    width: 11%;

}
#footer .footer-lang:hover{
    cursor: pointer;
}

